--- a/Companion/frontend/package.json
+++ b/Companion/frontend/package.json
@@ -3,14 +3,17 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "export NODE_OPTIONS=--openssl-legacy-provider && expo start",
+    "android": "export NODE_OPTIONS=--openssl-legacy-provider && expo start --android",
+    "ios": "export NODE_OPTIONS=--openssl-legacy-provider && expo start --ios",
+    "web": "export NODE_OPTIONS=--openssl-legacy-provider && expo start --web"
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.0",
+    "@react-native-clipboard/clipboard": "^1.11.1",
+    "@react-navigation/bottom-tabs": "^6.4.1",
     "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.2",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
@@ -19,6 +22,7 @@
     "react-native-paper": "5.0.0-rc.9",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "socket.io-client": "^4.5.3"
   },
